syntax = "proto3";

package product;

message Product {
  string id = 1;
  string title = 2;
  string description = 3;

}

message GetProductRequest {
  string product_id = 1;
}

message GetProductResponse {
  Product notif = 1;
}

service ProductService {
  rpc GetProduct(GetProductRequest) returns (GetProductResponse);

}
